[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.09"
fastapi = {extras = ["standard"], version = "^0.115.8"}
alembic = "^1.14.1"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
aiosqlite = "^0.21.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
