[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.8"}
alembic = "^1.14.1"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
openai = "^1.63.0"
aiohttp = "^3.11.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
aiosqlite = "^0.21.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
isort = "^6.0.0"
httpretty = "^1.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
